--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 3.6)
 project("airmap-panorama-stitcher")
 
 find_package(OpenCV 4.2 REQUIRED)
+
+# Boost is a development dependency and this binary has very 
+# little to ask from Boost, so linking statically
+set(Boost_USE_STATIC_LIBS ON)
 find_package(
     Boost REQUIRED
     program_options
