Debug/introspection utilities and unit tests. (#5)
* Add roll to GeoImage.

* Add debug mode and basic debug artifacts.

* Add camera make and model.

* Make Camera structs and move to new header.

* More separation and cleanup.

* add copyright

* clean up, add googletest and some initial tests

* add rotation matrix tests

* consistent paths

* Review feedback.

* Collapse short if blocks and make scope explicit.

* Replace custom path with boost::filesystem::path

* Use __FILE__ macro to get absolute path.

* Add camera model detection and tests.

* remove unused declaration

* Add notes about camera struct.

* Load images once and use EXPECT_EQ instead of EXPECT_TRUE

* Add custom cv::Mat equality assertions and tests.

* remove dead code

* Add missing curly brace.

* Fix relative path and clean up.

--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -10,6 +10,7 @@ set(Boost_USE_STATIC_LIBS ON)
 find_package(
     Boost REQUIRED
     program_options
+    filesystem
 )
 
 include_directories(
@@ -22,6 +23,7 @@ add_library(
     airmap_stitching
     src/cubemap.cpp
     src/cropper.cpp
+    src/images.cpp
     src/stitcher.cpp
     src/panorama.cpp
     3rdParty/TinyEXIF/TinyEXIF.cpp
@@ -42,6 +44,7 @@ target_link_libraries(
     airmap_stitcher
     airmap_stitching
     Boost::program_options
+    Boost::filesystem
 )
 
 #
@@ -54,4 +57,6 @@ install(TARGETS airmap_stitcher
 # Testing
 #
 enable_testing()
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test/bats)
+
+include(${CMAKE_CURRENT_SOURCE_DIR}/test/gtest/CMakeLists.txt)
