Basic elapsed time monitoring, estimated time remaining, and progress. (#11)
* Adjust match confidence based on detected camera and increase for Vesper.

* Strict cleanup.

* fix initialisation ordering to calm Android

* Add monitor to track and estimate time of stitch operations.

* Remove opencv includes in config header.

* AB compile fixes.

* Improved estimate using elapsed times to adjust as stitch progresses.

* Add progress percent, abstract shared code, and clean up.

* Remove unused capture.

* Add ElapsedTime, Timer, and Estimator tests.

* Add more estimator and monitor tests.

* Add extension of GraphCutSeamFinder with monitoring.

* Fix AirBoss build issues.

* Add comments.

* Use move iterator instead of assignment.

* Clean up.

* Fix comment.

* Fix tests after currentProgress change.

Co-authored-by: Remek Zajac <remek@airmap.com>

--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -25,8 +25,12 @@ add_library(
     src/cropper.cpp
     src/distortion.cpp
     src/images.cpp
-    src/stitcher.cpp
+    src/monitor/estimator.cpp
+    src/monitor/monitor.cpp
+    src/monitor/timer.cpp
+    src/opencv/seam_finders.cpp
     src/panorama.cpp
+    src/stitcher.cpp
     3rdParty/TinyEXIF/TinyEXIF.cpp
     3rdParty/TinyEXIF/tinyxml2.cpp
 )
