--- a/stitcher/test/gtest/CMakeLists.txt
+++ b/stitcher/test/gtest/CMakeLists.txt
@@ -11,6 +11,9 @@ add_executable(distortionTests test/gtest/distortion.cpp)
 add_executable(panoramaTests test/gtest/panorama.cpp)
 add_executable(gimbalTests test/gtest/gimbal.cpp)
 add_executable(imagesTests test/gtest/images.cpp)
+add_executable(monitorTests test/gtest/monitor/monitor.cpp)
+add_executable(monitorEstimatorTests test/gtest/monitor/estimator.cpp)
+add_executable(monitorTimerTests test/gtest/monitor/timer.cpp)
 
 target_link_libraries(cameraTests gtest gtest_main airmap_stitching)
 target_link_libraries(cameraModelsTests gtest gtest_main airmap_stitching Boost::filesystem)
@@ -18,6 +21,9 @@ target_link_libraries(distortionTests gtest gtest_main airmap_stitching Boost::f
 target_link_libraries(panoramaTests gtest gtest_main airmap_stitching Boost::filesystem)
 target_link_libraries(gimbalTests gtest gtest_main airmap_stitching)
 target_link_libraries(imagesTests gtest gtest_main airmap_stitching opencv_assert Boost::filesystem)
+target_link_libraries(monitorTests gtest gtest_main airmap_stitching)
+target_link_libraries(monitorEstimatorTests gtest gtest_main airmap_stitching)
+target_link_libraries(monitorTimerTests gtest gtest_main airmap_stitching)
 
 add_test(cameraTests cameraTests)
 add_test(cameraModelsTests cameraModelsTests)
@@ -25,3 +31,6 @@ add_test(distortionTests distortionTests)
 add_test(panoramaTests panoramaTests)
 add_test(gimbalTests gimbalTests)
 add_test(imagesTests imagesTests)
+add_test(monitorTests monitorTests)
+add_test(monitorEstimatorTests monitorEstimatorTests)
+add_test(monitorTimerTests monitorTimerTests)
