[BOSS-624] Remove dependencies from headers for AirBoss linux build (#12)
* Move dependencies to implementation files.

* Move dependencies out of headers for AirBoss.

* Separate basic estimator and monitored stitcher for "light" vs "full" versions.

* Move camera to MonitoredStitcher.

* Move boost includes to the right place.

* Fix estimator pointers.

* Remove debugging.

* PR feedback.

* PR feedback.

--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -21,16 +21,21 @@ include_directories(
 
 add_library(
     airmap_stitching
+    src/camera.cpp
+    src/camera_models.cpp
     src/cubemap.cpp
     src/cropper.cpp
     src/distortion.cpp
+    src/gimbal.cpp
     src/images.cpp
     src/monitor/estimator.cpp
     src/monitor/monitor.cpp
     src/monitor/timer.cpp
+    src/opencv/forward.cpp
     src/opencv/seam_finders.cpp
     src/panorama.cpp
     src/stitcher.cpp
+    src/stitcher_configuration.cpp
     3rdParty/TinyEXIF/TinyEXIF.cpp
     3rdParty/TinyEXIF/tinyxml2.cpp
 )
