Add calibration documentation and scripts. (#15)
* Add calibration documentation and scripts.

* Fix .gitignore and add patch files.

* Add todos and fix typos.

* Add description, usage, detail main operations, and add TODOs.

* Convert operations to a list.

* Clean up.

* More of a description and debug information.

* nit spaces

* Updates from feedback.

* REMOVEME

* Touch ups.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ dist
 **/*.vscode
 **/bats
 **/build*
+
+# calibration
+stitcher/calibration/ocam_calib/autoCornerFinder_linux
+stitcher/calibration/ocam_calib/autoCornerFinder_linux.zip
+stitcher/calibration/ocam_calib/Scaramuzza_OCamCalib_v3.0_win
+stitcher/calibration/ocam_calib/Scaramuzza_OCamCalib_v3.0_win.zip
